// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Country Sort Adapter should sort United Kingdom to top 1`] = `
Array [
  Object {
    "label": "United Kingdom",
    "value": "United Kingdom",
  },
  Object {
    "label": "Country A",
    "value": "Country A",
  },
  Object {
    "label": "Country B",
    "value": "Country B",
  },
]
`;

exports[`Country Sort Adapter should transform and sort country data 1`] = `
Array [
  Object {
    "label": "Country A",
    "value": "Country A",
  },
  Object {
    "label": "Country B",
    "value": "Country B",
  },
  Object {
    "label": "Country C",
    "value": "Country C",
  },
]
`;
